--- a/mioblog/templates/blog/post_detail.html
+++ b/mioblog/templates/blog/post_detail.html
@@ -14,15 +14,15 @@
 
 
 
-        {% for post in posts %}
-        <div class="post">
+    <div class="post">
+        {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-        {% endfor %}
+        {% endif %}
+        <h1>{{ post.title }}</h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
 
 
 
